# scanner

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  task.txt
.github/workflows/: linux.yml  s390x.yml
cmake/: googletest.cmake
lib/: CMakeLists.txt  context.cpp  parse_elf.cpp  parse_encoding.cpp  parse_mach-o.cpp  parse_pe.cpp  parse_xml.cpp  scnr.cpp  thread_pool.cpp
lib/include/scnr/: blocking_queue.hpp  context.hpp  file.hpp  parse_elf.hpp  parse_encoding.hpp  parse_mach-o.hpp  parse_pe.hpp  parse_xml.hpp  scnr.hpp  thread_pool.hpp  types.hpp  util.hpp
lib/include/scnr/elf/: README.md  elf.h
lib/include/scnr/mach-o/: README.md  fat.h  loader.h  machine.h
lib/include/scnr/pe/: pe.h
lib/tests/: CMakeLists.txt
lib/tests/unittests/: CMakeLists.txt  all_tests.cpp
lib/tests/unittests/data/: arm64-test  ascii.txt  testfile-iso-8859-1.txt  testfile-utf16-be.txt  testfile-utf32-be-bom.txt  utf16-le.txt  utf32-le.txt  utf8-bom.txt  utf8.txt  win1252.txt  x86_64-test  xml-ascii.xml  xml-iso-8859-1.xml
src/: CMakeLists.txt  main.cpp
